Configure build, add NoEffectScopeBindableValueAsStatement rule